@@ -1,0 +1,5 @@
+set(SHAREDDESKTOPONTOLOGIES_VERSION_MAJOR @SHAREDDESKTOPONTOLOGIES_VERSION_MAJOR@)
+set(SHAREDDESKTOPONTOLOGIES_VERSION_MINOR @SHAREDDESKTOPONTOLOGIES_VERSION_MINOR@)
+set(SHAREDDESKTOPONTOLOGIES_VERSION @SHAREDDESKTOPONTOLOGIES_VERSION@)
+
+set(SHAREDDESKTOPONTOLOGIES_ROOT_DIR @SHAREDDESKTOPONTOLOGIES_ROOT_DIR@)
